# Forecasting_FinancialTS

./: README.md  pyproject.toml
data/: df_clean.csv  df_final.csv  df_joint.csv
data/preparation/: ECB_irates.csv  M2_jp.csv  currencies.csv  currencies_stocks.csv  df_no24.csv  gdp.csv  ir_jp.csv  ir_jp.xlsx  ir_uk.csv  ir_uk.xls  ir_uk.xlsx  japan_pop.csv  m0_ez.csv  m0_jp.csv  macro_variables.csv  nasdaq.csv  sp500.csv
notebooks/: tree_based_models.ipynb
notebooks/1-data_acquisition/: Macro.ipynb  currencies.ipynb  currencies_stocks.ipynb  joint_dataset.ipynb
notebooks/2-cleaning/: cleaning.ipynb
notebooks/2-eda/: eda.ipynb
notebooks/2-models/: skforecast.ipynb  skforecast_tree_based_sp500.ipynb  tft.ipynb
notebooks/3-eda/: eda.ipynb
notebooks/3-models/: skforecast_tree_based_sp500.ipynb
notebooks/4-feature_engineering/: feature_engineering.ipynb  muestra.csv  split.ipynb
notebooks/4-models/: lstm.ipynb  lstm_regr.ipynb  skforecast_tree_based_nasdaq.ipynb  tft2.ipynb
notebooks/5-models/: shall_reg_hyperp.csv  shallow_classif.ipynb  shallow_learning_reg.ipynb  test.csv  train.csv  validation.csv  xgb (1).ipynb  xgb.ipynb
notebooks/5-models/ARIMA/: ARIMA.ipynb  eurusd.ipynb
notebooks/5-models/Transformers/: FXTransformerUni0001.keras
notebooks/5-models/Transformers/eurusd/: FXTransformerMulti.ipynb  (+5 more)
notebooks/5-models/old/: lstm_classif.ipynb
notebooks/data_acquisition/: Macro.ipynb  Nasdaq.ipynb  S&P500.ipynb  joint_dataset.ipynb  joint_datset.ipynb
notebooks/data_acquisition/data/: df_no24.csv  joint_datset.ipynb  unrate.csv  usdgbp.csv
(+16 files in other folders)
