[tool.poetry]
name = "forecasting-fts"
version = "0.1.0"
description = ""
authors = ["ikeryanez <ikeryanez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fredapi = "^0.5.1"
scikit-learn = "^1.4.1.post1"
keras = "^3.1.1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
