[tool.poetry]
name = "forecasting-fts"
version = "0.1.0"
description = ""
authors = ["ikeryanez <ikeryanez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fredapi = "^0.5.1"
lightgbm = "^4.3.0"
statsmodels = "^0.14.1"
skforecast = "^0.11.0"
matplotlib = "^3.8.3"
xgboost = "^2.0.3"
astral = "^3.2"
plotly = "^5.20.0"
catboost = "^1.2.3"
shap = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
